# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "fletcher"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Schwochow"]

[dependencies]
error-chain = "0.12" # improved error handling
indicatif = {version = "0.16", features = ["rayon"]} # progress bar
log = "0.4" # logging macros
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
libflate = "1.2.0"
brotli = "3.3.4"
libxml = "*"
color-eyre = "*"
