# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "fletcher"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Schwochow"]

[dependencies]
brotli = "3.3.4"
libflate = "1.2.0"
libxml = "0.3.1"
reqwest = { version = "0.11", features = ["blocking"] }